--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "main": [
     "src/angular-bayan.js"
   ],
-  "version": "1.0.0",
+  "version": "1.0.1",
   "homepage": "https://github.com/gerrproger/angular-bayan",
   "authors": [
     "Gerrproger <gerrproger@gmail.com>"
@@ -24,5 +24,15 @@
     "test",
     "tests",
     "package.json"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gerrproger/angular-bayan.git"
+  },
+  "dependencies": {
+    "angular": "~1.2"
+  },
+  "devDependencies": {
+    "angular": "~1.2"
+  }
 }
