Angualar version updated

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "url": "https://github.com/gerrproger/angular-bayan/issues"
   },
   "dependencies": {
-    "angular": "~1.6.9"
+    "angular": "^1.7.8"
   },
   "devDependencies": {
-    "angular": "~1.2"
+    "angular": "^1.7.8"
   }
 }
